# EasyEditor

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: Renderer2D_Text.glsl
src/: EditorMain.cpp  EditorMain.ixx
src/Panels/: SceneHierachyPanel.ixx  SceneHierarchyPanel.cpp
